--- a/giftlink-backend/.env
+++ b/giftlink-backend/.env
@@ -1,2 +1,3 @@
-MONGO_URL=mongodb://root:6nN61199huiGAE0dbaGQ9HNZ@172.21.45.204:27017
+MONGO_URL=mongodb://root:FTRLXev3DFKqN2IGBirOlGjw@172.21.8.175:27017
 DATASRC=gifts.json
+JWT_SECRET=setasecret
