--- a/giftlink-backend/.env
+++ b/giftlink-backend/.env
@@ -1,3 +1,3 @@
-MONGO_URL=mongodb://root:2uFZBLFzlVPERwAHYBVNez7d@172.21.196.148:27017
+MONGO_URL=mongodb://mongodb-service:27017
 DATASRC=gifts.json
-JWT_SECRET=setasecret
+JWT_SECRET=mysecret
